basic layout and nav bar

--- a/index.html
+++ b/index.html
@@ -3,10 +3,56 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Web Prototype</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://use.typekit.net/muj4cxp.css">
   </head>
   <body>
     <script src="script.js"></script>
   </body>
 </html>
+
+<body>
+<!--This nav bar is used across all pages. It contains the LOGO of the foundation (which links to the home page) and the Emergency Contact.-->
+  <nav class="top_nav">
+    <ul>
+     <!--Note: the image of MHFA should be used instead of the word "Home"*/-->
+      <li><a href="#home">Home</a></li>
+      <li><a href="tel:1300643287">Emergency Contact</a></li>
+      
+      
+    </ul>
+  </nav>
+
+  <!--This nav ber is used navigate content. It can be copied and adapted accordingly.-->
+  <nav class="content_nav">
+    <ul>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#info">Information</a></li>
+      <li><a href="#blog">Blog</a></li>
+      <li><a href="#support">Find Support</a></li>
+    </ul>
+  </nav>
+
+  <article>
+    <section id="home">
+      <h1>This is a website. </h1>
+    </section>
+
+    <section id="about">
+    </section>
+
+    <section id="info">
+    </section>
+
+    <section id="blog">
+    </section>
+
+    <section id="support">
+    </section>
+
+    <section id="log_in">
+    </section>
+  </article>
+
+</body>
