Hamburger menu and About Page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </body>
 </html>
 
-<body>
+<body id="home">
 <!--This nav bar is used across all pages. It contains the LOGO of the foundation (which links to the home page) and the Emergency Contact.-->
   <nav class="top_nav">
     <ul>
@@ -27,8 +27,8 @@
   <!--This nav ber is used navigate content. It can be copied and adapted accordingly.-->
   <nav class="content_nav">
     <ul>
-      <li><a href="#about">About Us</a></li>
-      <li><a href="#info">Information</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="information.html">Information</a></li>
       <li><a href="#blog">Blog</a></li>
       <li><a href="#support">Find Support</a></li>
     </ul>
