--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <ul>
       <li><a href="about.html">About Us</a></li>
       <li><a href="information.html">Information</a></li>
-      <li><a href="#blog">Blog</a></li>
-      <li><a href="#support">Find Support</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="support.html">Find Support</a></li>
     </ul>
   </nav>
 
