--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body id="home">
 <!--This nav bar is used across all pages. It contains the LOGO of the foundation (which links to the home page) and the Emergency Contact.-->
-  <nav class="top_nav">
+ <nav class="top_nav"> 
     <ul>
      <!--Note: the image of MHFA should be used instead of the word "Home"*/-->
       <li><a href="#home">Home</a></li>
@@ -35,24 +35,41 @@
   </nav>
 
   <article>
-    <section id="home">
-      <h1>This is a website. </h1>
-    </section>
+    <div id="home_header">
+      <h2>Find Your Balance</h2>
+      <img class="beam"
+      src="assets/balance_beam.svg" alt="balance beam for central theme">
+      <h2>Mental Health Foundation Australia</h2>
+    </div>
 
-    <section id="about">
-    </section>
+    <div class ="flow">
+    <div class="page_content"><a href="about.html">
+      <h1>About Us</h1>
+      <img class="icon" src="assets/about_us.svg" alt="about us graphic"></a>
+    </div>
 
-    <section id="info">
-    </section>
+    <div class="page_content"><a href="information.html">
+      <h1>Information</h1>
+      <img class="icon" src="assets/information.svg" alt="information graphic"></a>
+    </div>
 
-    <section id="blog">
-    </section>
+    <div class="page_content"><a href="blog.html">
+      <h1>Blog</h1>
+      <img class="icon" src="assets/blog.svg" alt="blog graphic"></a>
+    </div>
 
-    <section id="support">
-    </section>
+    <div class="page_content"><a href=#support.html>
+      <h1>Find Support</h1>
+      <img class="icon" src="assets/find_support.svg" alt="find support graphic"></a>
+    </div>
 
-    <section id="log_in">
-    </section>
+    <div class="page_content"> <a href="login.html" target="_blank">
+      <h1>Get Involved</h1>
+      <img id="find_support" src="assets/get_involved.svg" alt="get involved graphic"></a>
+    </div>
+  
+  </div>
+
   </article>
 
 </body>
