landing page compeleted

--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
   
   </div>
 
+  <div class="flow2">
+  <h2>Mental Health in Australia</h2>
+  <p>Almost half of all Australians (45%) aged 16 to 85 years will experience a mental health disorder at some time in their life. 
+    <br>
+    <br>
+    <strong>You are not alone.</strong>
+  </p>
+  </div>
+
+  <footer>
+    <p>Our bodies are our gardens - <br> our wills are our gardeners.</p>
+  </footer>
   </article>
 
 </body>
