About Us and Info
-About Us text is up
-Basic skeleton of info page is up

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   </body>
 </html>
 
-<body id="home">
+<body>
+<div class="header">
 <!--This nav bar is used across all pages. It contains the LOGO of the foundation (which links to the home page) and the Emergency Contact.-->
  <nav class="top_nav"> 
     <ul>
      <!--Note: the image of MHFA should be used instead of the word "Home"*/-->
-      <li><a href="#home">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="tel:1300643287">Emergency Contact</a></li>
       
       
@@ -25,20 +26,21 @@
   </nav>
 
   <!--This nav ber is used navigate content. It can be copied and adapted accordingly.-->
-  <nav class="content_nav">
+  <!-- <nav class="content_nav">
     <ul>
       <li><a href="about.html">About Us</a></li>
       <li><a href="information.html">Information</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="support.html">Find Support</a></li>
     </ul>
-  </nav>
+  </nav> -->
+</div>
 
   <article>
     <div id="home_header">
       <h2>Find Your Balance</h2>
       <img class="beam"
-      src="assets/balance_beam.svg" alt="balance beam for central theme">
+      src="assets/mhfa_logo.png" alt="balance beam for central theme">
       <h2>Mental Health Foundation Australia</h2>
     </div>
 
