media queries settled

--- a/information.html
+++ b/information.html
@@ -10,7 +10,6 @@
   <body>
     <script src="script.js"></script>
   </body>
-</html>
 
 <body>
 <div class="header">
@@ -127,21 +126,53 @@
   </div
   </div> -->
 
-  <div class = "age_group_containers">
-    <div class>
-      <img class="info_icons_1"src="assets/info_YP.svg" alt="information for young persons graphic">
+<div class = "age_group_containers">
+    <div>
+      <img class="info_icons"src="assets/info_YP.svg" alt="information for young persons graphic">
     </div>
-    <div class="info_text_container_1">
-      <p>
+    <div class="info_text_container">
       <ul class="info_lead">
         <li>General</li>
         <li>Common Types of Struggles</li>
         <li>How to Overcome Them</li>
         <li>Who to Approach</li>
       </ul>
-    </p>
-    </div
+  </div>
+  <div >
+    <img class="info_icons"src="assets/info_MA.svg" alt="information for young persons graphic">
+  </div>
+  <div class="info_text_container">
+    <ul class="info_lead">
+      <li>General</li>
+      <li>Common Types of Struggles</li>
+      <li>How to Overcome Them</li>
+      <li>Who to Approach</li>
+    </ul>
   </div>
 
+  <div>
+    <img class="info_icons"src="assets/info_carers.svg" alt="information for young persons graphic">
+  </div>
+  <div class="info_text_container">
+    <ul class="info_lead">
+      <li>General</li>
+      <li>Common Types of Struggles</li>
+      <li>How to Overcome Them</li>
+      <li>Who to Approach</li>
+    </ul>
+  </div>
+</div>
+
 </main>
+
+<!-- <br>
+<br>
+<br> -->
+
+<footer>
+  <p>Our bodies are our gardens - <br> our wills are our gardeners.</p>
+</footer>
+
 </body>
+
+</html>
