--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
           </ul>
         </p>
         <div class="image_container">
-          <img class="image_pair" src="assets/emeritus.jpeg" alt="Emeritus Professor Bruce J. Tonge" width="200px" height="auto">
-          <img class="image_pair" src="assets/carole.jpeg" alt="Carole Crean" width="200px" height="auto">
+          <img class="image_our_board" src="assets/emeritus.jpeg" alt="Emeritus Professor Bruce J. Tonge" width="200px" height="auto">
+          <img class="image_our_board" src="assets/carole.jpeg" alt="Carole Crean" width="200px" height="auto">
         </div>
       
         <h3>Chairperson <br>and<br> Vice-Chairperson</h3>
@@ -100,8 +100,8 @@
           </ul>
         </p>
         <div class="image_container">
-          <img class="image_pair" src="assets/vasan.jpeg" alt="Vasan Srinivasan" width="200px" height="auto">
-          <img class="image_pair" src="assets/jim.jpeg" alt="Jim Goodin" width="200px" height="auto">
+          <img class="image_our_board" src="assets/vasan.jpeg" alt="Vasan Srinivasan" width="200px" height="auto">
+          <img class="image_our_board" src="assets/jim.jpeg" alt="Jim Goodin" width="200px" height="auto">
         </div>
         
         <h3>Secretary</h3>
