--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <img class="icon" src="assets/blog.svg" alt="blog graphic"></a>
     </div>
 
-    <div class="page_content"><a href=#support.html>
+    <div class="page_content"><a href="support.html">
       <h1>Find Support</h1>
       <img class="icon" src="assets/find_support.svg" alt="find support graphic"></a>
     </div>
